@@ -2,7 +2,6 @@ TODO
 * implement libsmdev_check_device_wide
 * libsmdev_handle_get_offset
 * work on libsmdev_metadata
-* implement posix_fadvise
 
 Library
 * windows read error retry support
@@ -17,6 +16,9 @@ Library
 * detect bus type
 * determine USB serial number
 * add read/write error logging
+
+20100120
+* added posix_fadvice
 
 20100118
 * worked on error listing
